--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -17,7 +17,7 @@
             style="position: absolute;bottom: 9px;color: grey;z-index: 9999999999;right: 66px;outline: none;">
             <mat-icon class="full-icon" style="font-size: 35px;">save
             </mat-icon>
-        </button>
+        </button>        
     </div>
     <div class="display">
         <div style="flex-direction: column;" class="bmx-page" *ngIf="true">
@@ -52,6 +52,25 @@
 
                 <!-- BMX PARAGRAPH EDITOR 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 -->
                 <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph">
+                    <button *ngIf="!showModalVideo" (click)="seeTutorial()" mat-icon-button matTooltip="See tutorial" matTooltipPosition="above"
+                 
+                        style="position: absolute;color: grey;z-index: 9999999999;right: 10%;top: -7%;outline: none;">
+                        <mat-icon class="full-icon" style="font-size: 40px;">contact_support
+                        </mat-icon>
+                    </button>
+                    <!-- modal -->
+                    <div *ngIf="showModalVideo" id="myModal" class="modal-video">
+                        <label class="container-checkbox">Don't show again
+                            <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
+                            <span class="checkmark">&#x2714;</span>        
+                        </label>
+                    
+                        <div class="modal-content">
+                            <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
+                        </div>
+                        <span class="close-modal" (click)="showModalVideo=false">Close</span>
+                    </div>
+                    <!-- modal end -->
                     <app-text-paragraph [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
                         [bmxClientPageOverview]="bmxClientPageOverview"></app-text-paragraph>
                 </div>
