fixed name issue

--- a/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
+++ b/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
@@ -49,9 +49,9 @@
           Respondents </mat-checkbox>
       </div>
       <hr>
-      <div style="display:flex;flex-direction: column;justify-content: center;align-items: center;">
-        <h3><span style="font-weight: bold;">SELECT RESPONDENTS</span></h3>
-        <app-docx-survey [reportSettings]="reportSettings" [isMenuActive5]="true"></app-docx-survey>
+      <div style="display:flex;flex-direction: column;justify-content: center;align-items: center; width: 100%;">
+        <h3><span style="font-weight: bold; width: 100%;">SELECT RESPONDENTS</span></h3>
+        <app-docx-survey style="width: 100%;" [reportSettings]="reportSettings" [isMenuActive5]="true"></app-docx-survey>
       </div>
     </mat-card-content>
   </mat-card>
