--- a/src/app/bmx/bmx-creator/docx-survey/docx-survey.component.html
+++ b/src/app/bmx/bmx-creator/docx-survey/docx-survey.component.html
@@ -29,7 +29,7 @@
 
         <ng-container matColumnDef="Name">
             <th mat-header-cell *matHeaderCellDef> User </th>
-            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
         <ng-container matColumnDef="Status">
