add new tutorial desktop boton see tutorial

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -52,9 +52,9 @@
 
                 <!-- BMX PARAGRAPH EDITOR 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 -->
                 <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph">
-                    <button (click)="seeTutorial()" mat-icon-button matTooltip="See tutorial" matTooltipPosition="above"
+                    <button *ngIf="!showModalVideo" (click)="seeTutorial()" class="see-tutorial" mat-icon-button matTooltip="See tutorial" matTooltipPosition="above"
                  
-                        style="position: absolute;color: grey;z-index: 9999999999;right: 2%;top: -30%;outline: none;">
+                        style="position: absolute;color: grey;z-index: 9999999999;outline: none;">
                         <mat-icon class="full-icon" style="font-size: 40px;">contact_support
                         </mat-icon>
                     </button>
