--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -1,5 +1,11 @@
 <div class="page-design noselect disable-dbl-tap-zoom">
     <div class="desktop">
+        <button *ngIf="true" (click)="seeTutorial()" class="see-tutorial" mat-icon-button matTooltip="See tutorial" matTooltipPosition="above"
+                 
+            style="position: absolute;color: grey;z-index: 9999999999;outline: none;">
+            <mat-icon class="full-icon" style="font-size: 36px;">contact_support
+            </mat-icon>
+        </button>
         <button (click)="displayQrCode()" mat-icon-button matTooltip="design tools" matTooltipPosition="above"
             *ngIf="true"
             style="position: absolute;bottom: 10px;color: grey;z-index: 9999999999;right: 33px;outline: none;">
@@ -52,12 +58,13 @@
 
                 <!-- BMX PARAGRAPH EDITOR 📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑📑 -->
                 <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph">
-                    <button *ngIf="!showModalVideo" (click)="seeTutorial()" mat-icon-button matTooltip="See tutorial" matTooltipPosition="above"
+                    <button *ngIf="!showModalVideo" (click)="seeTutorial()" class="see-tutorial-mobil" mat-icon-button matTooltip="See tutorial" matTooltipPosition="above"
                  
-                        style="position: absolute;color: grey;z-index: 9999999999;right: 10%;top: -7%;outline: none;">
-                        <mat-icon class="full-icon" style="font-size: 40px;">contact_support
+                        style="position: absolute;color: grey;z-index: 9999999999;outline: none;">
+                        <mat-icon class="full-icon" style="font-size: 36px;">contact_support
                         </mat-icon>
                     </button>
+                   
                     <!-- modal -->
                     <div *ngIf="showModalVideo" id="myModal" class="modal-video">
                         <label class="container-checkbox">Don't show again
