--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -221,8 +221,17 @@
         justify-content: center;
         position: fixed;
         bottom: 10px;
-    }    
+    }
+    .see-tutorial-mobil{
+        display: none;
+    }
+    .see-tutorial{
+        bottom: 10px;
+        right: 98px;
+    }
+        
 }
+
 //mobile
 @media (max-width: 576px) {
     .page-design {
@@ -256,10 +265,14 @@
     .menu-descriptions{
         display: none;
     }
-
        
     p{
         line-height: 25px;
+    }
+
+    .see-tutorial-mobil{
+        right: 10%;
+        top: -10%;
     }
 }
 
@@ -271,15 +284,14 @@
         margin: 1% auto;
         margin-left: auto;
         width: 75%;
-        height: 78%;
+        height: 75%;
         overflow: scroll;
     }
 
     .modal-video .close-modal{
         margin-left: 42.5%;
         width: 15%;
-    }
-    
+    }    
 }
 
 //---------end modal------------//
