--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -1,5 +1,5 @@
-<!-- <app-show-video></app-show-video> -->
-<!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video">
+<!-- modal -->
+ <!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video">
     <label class="container-checkbox">Don't show again
         <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
         <span class="checkmark">&#x2714;</span>        
@@ -10,7 +10,7 @@
     </div>
     <span class="close-modal" (click)="showModalVideo=false">Close</span>
 </div> -->
-<!-- modal end -->
+<!-- end modal -->
 <button *ngIf="openSettings && bmxClientPageOverview" class="cancel" (click)=" replaceBiI_Markers(); openSettings = !openSettings"
     mat-icon-button>
     <mat-icon class="full-icon" style="font-size: 25px;">check_circle</mat-icon>
