--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -1,3 +1,14 @@
+<!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video">
+    <label class="container-checkbox">Don't show again
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
+        <span class="checkmark">&#x2714;</span>        
+    </label>
+
+    <div class="modal-content">
+        <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
+    </div>
+    <span class="close-modal" (click)="showModalVideo=false">Close</span>
+</div> -->
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <div *ngIf="bmxClientPageOverview" style="display: flex;
     flex-direction: row-reverse;
@@ -137,8 +148,6 @@
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
-
-
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
@@ -430,8 +439,9 @@
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
                     <div *ngIf="(y == 0)" class="header-title " (mouseenter)="selectedColumn = e">
+                        
                         <div style="display: flex;flex-direction: row;justify-content: space-between;">
-
+                                             
                             <textarea *ngIf="editSingleTableCells"
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                 style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
@@ -606,7 +616,8 @@
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;" cdkDrag>
 
-            <div class="test-name-table" *ngIf="(y != 0)" [style.height]="(selectedCard == y)?'':'100px'">
+            <div (click)="openSelected(y)" class="test-name-table" *ngIf="(y != 0)" [style.height]="(open(y))?'':'100px'">
+                              
                 <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                 <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
                     *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
@@ -727,11 +738,11 @@
 
                         <!-- TEXT_AREA COLUMN-->
                         <div style="display: flex;justify-content: center;">
-                            <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true && selectedCard == y"
+                            <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true && open(y)"
                                 [style.width]="'95%'" [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                 cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight + 2"
                                 style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;
-                            animation: bounceIn 500ms ease-in forwards;padding: 0 4px;margin-bottom: 10px;"
+                                animation: bounceIn 500ms ease-in forwards;padding: 0 4px;margin-bottom: 10px;"
                                 class="row-box" [(ngModel)]="testName[columnName]" placeholder="comments" rows="4"
                                 cols="50"></textarea>
                         </div>
