Ajuste path lottie

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -259,7 +259,7 @@
     z-index: 999;    
     width: 465px;animation: 
     fadeIn 3s ease 4s forwards;" slot="end" autoplay loop
-    [src]="'./assets/img/cubo.json'">
+    [src]="'/assets/img/cubo.json'">
 </lottie-player>
 <lottie-player class="lottie-player" *ngIf="loadingLottie" style="
     position: absolute;
@@ -269,5 +269,5 @@
     z-index: 999;    
     width: 70px;animation: 
     fadeIn 3s ease 4s forwards;" slot="end" autoplay loop
-    [src]="'./assets/img/esfera.json'">
+    [src]="'/assets/img/esfera.json'">
 </lottie-player>
