--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -122,22 +122,17 @@
     }
 }
 
-.container-checkbox input:checked ~ .checkmark {
-    background-color: black;
-}
-
 /* Contenedor */
 .container-checkbox {
     display: block;
     position: relative;
     padding-left: 35px;
     margin-top: 2.5%;
-    margin-left: 3%;
+    // margin-left: 3%;
     margin-bottom: 12px;
     cursor: pointer;
     font-size: 22px;
     color: #e9ecef;
-
 }
 
 /* escondemos el default checkbox */
