--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -98,17 +98,18 @@
 
     .close-modal {
         // margin-bottom: 5px;
-        position: absolute;
-        top: 88%;
-        margin-left: 36.5%;
+        position: relative;
+        top: 12%;
+        left: 42.5%;
+        width: 15%;
+        // margin-left: 36.5%;
         color: black;
         background-color: #e9ecef;
-        float: right;
+        // float: right;
         font-size: 22px;
         // font-weight: bold;
         text-align: center;
-        height: 25px;
-        width: 25%;
+        height: 25px;      
         border-radius: 5px;
         transition: background-color 0.5s, color 0.5s;
     }
@@ -126,9 +127,10 @@
 .container-checkbox {
     display: block;
     position: relative;
+    top: 10%;
     padding-left: 35px;
-    margin-top: 2.5%;
-    // margin-left: 3%;
+    // margin-top: 2.5%;
+    margin-left: 3%;
     margin-bottom: 12px;
     cursor: pointer;
     font-size: 22px;
@@ -284,9 +286,9 @@
     }
 
     .modal-video .close-modal{
-        margin-left: 42.5%;
-        width: 15%;
-        top: 75%;
+        // margin-left: 42.5%;
+      
+        top: 12%;
     }    
 }
 
@@ -301,9 +303,10 @@
     }
 
     .modal-video .close-modal{
-        margin-left: 42.5%;
-        width: 15%;
-        top: 90%;
+        position: relative;
+        // margin-left: 42.5%;
+      
+        top: 12%;
     }
 }
 
