--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -102,6 +102,7 @@
         top: 12%;
         left: 42.5%;
         width: 15%;
+        padding: 0px 5px;
         // margin-left: 36.5%;
         color: black;
         background-color: #e9ecef;
